--- a/resources/assets/scss/main.scss
+++ b/resources/assets/scss/main.scss
@@ -1,4 +1,19 @@
+@import 'components/hero';
+@import 'components/about';
+@import 'components/testimonials';
+@import 'components/cta';
+@import 'components/footer';
+
 * {
   margin: 0;
   padding: 0;
+}
+
+html, body {
+  width: 100%;
+  height: 100%;
+}
+
+.pointer {
+  cursor: pointer;
 }
